# final-project-student-information-system-khushard

./: CMakeLists.txt  README.md  StudentSystem.cpp  StudentSystem.h  main.cpp  student.cpp  student.h
