cmake_minimum_required(VERSION 3.27)
project(final_project_student_information_system_khushard)

set(CMAKE_CXX_STANDARD 17)

add_executable(final_project_student_information_system_khushard main.cpp
        student.h
        student.cpp
        StudentSystem.h
        StudentSystem.cpp
        StudentSystem.cpp)
